@startuml
'https://plantuml.com/class-diagram
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


<font color=Black size=15><b>Built by WeByte ©</font>
endheader
title <b>US8 - Domain Model\n
class Company{
 - designation
}

class ClinicalAnalysisLaboratory{
- id
}
class Laboratory{
- name
- address
- phoneNumber
- texIdentificationNumber
}
class TestType{
- code
- description
- colectingMethod
}


Company "1" -- "*" ClinicalAnalysisLaboratory : owns >
Company "1" -- "0.. 1" ChemicalLaboratory : owns >
ClinicalAnalysisLaboratory "*" -- "*" TestType : performs >
Company "1" -- "*" TestType : conducts >
ChemicalLaboratory --|> Laboratory
ClinicalAnalysisLaboratory --|> Laboratory
@enduml